<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/etAddDescription"
        android:layout_width="360dp"
        android:layout_height="92dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/etDescription"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/tvAddDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvAddDescription" />

    <EditText
        android:id="@+id/etAddTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etTaskName"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/tvAddTaskName"
        app:layout_constraintTop_toBottomOf="@+id/tvAddTaskName" />

    <EditText
        android:id="@+id/etAddDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/etDate"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/tvAddDeadline"
        app:layout_constraintTop_toBottomOf="@+id/tvAddDeadline" />

    <EditText
        android:id="@+id/etAddTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/etTime"
        android:inputType="time"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/etAddDate"
        app:layout_constraintTop_toBottomOf="@+id/etAddDate" />

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/btnAddTask"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbAddPriority" />

    <TextView
        android:id="@+id/tvAddTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvTaskName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvAddDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvDescription"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etAddTaskName"
        app:layout_constraintTop_toBottomOf="@+id/etAddTaskName" />

    <TextView
        android:id="@+id/tvAddDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvDeadline"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etAddDescription"
        app:layout_constraintTop_toBottomOf="@+id/etAddDescription" />

    <CheckBox
        android:id="@+id/cbAddPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cbPriority"
        app:layout_constraintStart_toStartOf="@+id/etAddTime"
        app:layout_constraintTop_toBottomOf="@+id/etAddTime" />


</androidx.constraintlayout.widget.ConstraintLayout>