<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


    <item
        android:id="@+id/action_download"
        android:icon="@drawable/download"
        android:title="@string/btnDownload"
        app:showAsAction="ifRoom"
        android:orderInCategory="100" />
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/upload"
        android:title="@string/btnUpload"
        app:showAsAction="ifRoom"
        android:orderInCategory="101" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort"
        android:title="@string/btnSortMenu"
        app:showAsAction="ifRoom"
        android:orderInCategory="102" />
</menu>